--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -339,7 +339,7 @@ html {
   padding: 0;
   font-family: var(--montserrat), sans-serif;
   letter-spacing: 0.5px;
-  line-height: 1.4rem;
+  line-height: 1.3rem;
   transition-property: color, background-color;
   transition-duration: .2s;
   transition-timing-function: ease;
