--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -27,7 +27,7 @@
   z-index: 1;
   font-size: 1.7rem;
   font-weight: 700;
-  line-height: 1.7rem;
+  line-height: 1.6rem;
   color: var(--text-1);
   text-align: left;
   border-radius: .5rem;
