--- a/src/components/footer/page.module.css
+++ b/src/components/footer/page.module.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     padding: 0;
-    background-size: 280%;
+    background-size: 290%;
     background-position: top center;
     background-repeat: no-repeat;
     background-image: linear-gradient(180deg, var(--surface-1) 0%, var(--opaq-1) 100%), url(../../../public/assets/images/Mesh\ Holographic\ Gradients\ -\ Dark\ Gradient\ 12.png);
